<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	>
    
    <Button
        android:id="@+id/bt_Company"
		android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:text="@string/company"
        android:onClick="onButtonClick"
        android:textSize="15dp" 
        android:padding="20dp"/>	    
	    
	    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	        
	    <Button
	        android:id="@+id/bt_newCompany"
			android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="50"
	        android:text="@string/newCompany"
	        android:onClick="onButtonClick"
	        android:textSize="15dp" 
	        android:padding="20dp"/>
	
		<Button
	        android:id="@+id/bt_loadCompany"
			android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="50"
	        android:text="@string/loadCompany"
	        android:onClick="onButtonClick"
	        android:textSize="15dp" 
	        android:padding="20dp"/>
	
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
	    <Button
	        android:id="@+id/bt_editCompany"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="50"
	        android:text="@string/editCompany"
	        android:onClick="onButtonClick"
	        android:textSize="15dp" 
	        android:padding="20dp" />
	
	    <Button
	        android:id="@+id/bt_deleteCompany"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="50"
	        android:text="@string/deleteCompany"
	        android:onClick="onButtonClick"
	        android:textSize="15dp" 
	        android:padding="20dp" />
	
	</LinearLayout>
	
    <Button
        android:id="@+id/bt_loadtestCompany"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:text="@string/load_test_company"
        android:onClick="onButtonClick"
        android:textSize="15dp" 
        android:padding="20dp" />
	
</LinearLayout>